generated/nixidy/prod/qbittorrent/Service-qbittorrent.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/service: qbittorrent
  name: qbittorrent
  namespace: media
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/controller: qbittorrent
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/name: qbittorrent
  type: ClusterIP
