generated/nixidy/prod/qbittorrent/HTTPRoute-qbittorrent.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: qbittorrent
  name: qbittorrent
  namespace: media
spec:
  hostnames:
    - qbittorrent.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: qbittorrent
          namespace: media
          port: 8080
          weight: 1
